# docker-template

./: .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: front.yaml  server.yaml  web.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
front/: .gitignore  .oxfmtrc.json  .oxlintrc.json  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  tsconfig.node.json
front/src/: App.tsx  env.d.ts  index.tsx
front/src/api/todos/: hooks.ts  index.ts  todo.ts
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx
frontend/src/api/todos/: todo.ts
server/: .gitignore  Cargo.toml  Dockerfile
server/migrations/: 0001_create_todos.sql
server/src/: main.rs
web/: Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts
web/src/: App.css  App.tsx  env.d.ts  index.tsx
web/src/api/todos/: hooks.ts  index.ts  todo.ts
