[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
