[package]
name = "app-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
