[package]
name = "app-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.11", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
